--- a/templates/base.html
+++ b/templates/base.html
@@ -30,16 +30,15 @@
 <body>
     <div id="wrapper">
         <!-- Sidebar -->
-        <!--
-        <div id="sidebar-small-wrapper">
-            <ul class="sidebar-nav">
+        <div id="sidebar-wrapper-small">
+            <ul class="sidebar-nav sidebar-nav-small">
                 <li class="sidebar-brand">
                     <a href="{{ SITEURL }}/">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </li>
             </ul>
-        </div>-->
+        </div>
         <div id="sidebar-wrapper">
             <ul id="accordion" class="sidebar-nav">
                 <li class="sidebar-brand">
