--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,2 @@
-{% extends "base.html" %}
-{% block content %}
-    {% if articles %}
-        {% for article in (articles_page.object_list if articles_page else articles) %}
-            <article>
-                <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-                {% if DISPLAY_ARTICLE_INFO_ON_INDEX %}
-                    <div class="well well-sm">
-                    </div>
-                {% endif %}
-                <div class="summary">{{ article.summary }}
-                    <a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
-                </div>
-            </article>
-            <hr/>
-        {% endfor %}
-    {% endif %}
-{% endblock content %}
+{% extends "include/article_list.html" %}
+
