--- a/templates/include/article_list.html
+++ b/templates/include/article_list.html
@@ -3,13 +3,14 @@
     {% if articles %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
-                <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-                {% if DISPLAY_ARTICLE_INFO_ON_INDEX %}
-                    <div class="well well-sm">
-                    </div>
-                {% endif %}
+                <h2>
+                    <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+                    <small>
+                        {% include "include/article_info.html" %}
+                    </small>
+                </h2>
                 <div class="summary">{{ article.summary }}
-                    <a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
+                    {#<a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ article.url }}">more ...</a>#}
                 </div>
             </article>
             <hr/>
