improve sidebar toggle, prepare down/up arrows in sidebar

--- a/static/css/pelican-twitchy.css
+++ b/static/css/pelican-twitchy.css
@@ -170,7 +170,18 @@
     display: inline;
 }
 
+/*
+a span.glyphicon-chevron-down, a.collapsed span.glyphicon-chevron-up{
+    display: inline;
+}
+a.collapsed span.glyphicon-chevron-down, a span.glyphicon-chevron-up{
+    display: none;
+}
+*/
 
+.padding-small{
+    padding: 5px;
+}
 
 .post-info{
     display: inline-block;
