--- a/templates/category.html
+++ b/templates/category.html
@@ -6,3 +6,9 @@
 {% endblock %}
 
 {% block collapse_categories %}in{% endblock %}
+
+{% block precontent %}
+    <header class="page-header">
+        <h1>Latest Articles in {{ category }}</h1>
+    </header>
+{% endblock %}
